--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aioboto3>=15.0.0",
+    "pytest>=8.4.1",
+    "ruff>=0.12.3",
 ]
